--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@
 
 button
 {
-font-size:40px;
+font-size:30px;
 font-weight: 500;
 color:blue;
-background:green;
+background:linear-gradient(to right,#338AFF, #3CF0C5);
 border:0;
 border-radius:12px;
 margin:10px 10px;
